# Projeto-CG

./: .gitignore  CMakeLists.txt  README.md
exemplos/: ex0.txt  ex1.txt
include/: caxe.hpp  gl_code.hpp  gl_wrapper.hpp  parser.hpp
src/: caxe.cpp  gl_wrapper.cpp  main.cpp  parser.cpp
